A lot of edits after bug not showing git edits

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,11 +7,11 @@
   --background: #100d26;
 }
 
-a {
+.nav-links > a {
   position: relative;
 }
 
-a::after {
+.nav-links > a::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -24,7 +24,7 @@ a::after {
   transition: transform 0.25s ease-out;
 }
 
-a:hover::after {
+.nav-links > a:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
